--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -12,4 +12,4 @@ jobs:
       - run: docker image build --tag="${IMAGE_NAME}" ./
       # Uncomment to validate your work (should fail the next step)
       # - run: echo 'Hello Error' > ./index.js
-      - run: docker container run --volume="$(pwd)":/app "${IMAGE_NAME}" npm run lint
+      - run: docker container run --volume="$(pwd)":"$(pwd)" --workdir="$(pwd)" "${IMAGE_NAME}" npm run lint
