fix2: modif workdir

--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -8,7 +8,7 @@ jobs:
     env:
       IMAGE_NAME: "mynode"
     steps:
-      - uses: actions/checkout@v4 # Récupère le contenu du dépôt correspondant au commit du workflow en cours
+      - uses: actions/checkout@v4 
       - run: docker image build --tag="${IMAGE_NAME}" ./
       # Uncomment to validate your work (should fail the next step)
       # - run: echo 'Hello Error' > ./index.js
