--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-    "name": "sayhello",
+    "name": "esgi-ci-cd",
     "version": "1.0.0",
-    "description": "A web application which says hello",
+    "description": "Cours exemple",
     "main": "index.js",
     "scripts": {
-        "lint": "eslint .",
-        "start": "node index.js"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "lint": "eslint ."
     },
+    "keywords": [],
     "author": "",
     "license": "ISC",
-    "engines": {
-        "node": "23"
-    },
     "devDependencies": {
-        "@eslint/js": "^9.16.0",
-        "eslint": "^9.16.0",
-        "eslint-plugin-react": "^7.37.2",
-        "globals": "^15.13.0",
-        "jshint": "^2.13.6"
-    },
-    "jshintConfig": {
-        "esversion": 6
+      "eslint": "^9.16.0",
+      "eslint-plugin-react": "^7.37.2",
+      "globals": "^15.13.0"
     }
-}
+  }
+  
