--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -16,4 +16,16 @@ jobs:
       # Uncomment to validate your work (should fail the next step)
       # - run: echo 'Hello Error' > ./index.js
       # - run: docker container run --volume="$(pwd)":"$(pwd)" --workdir="$(pwd)" "${IMAGE_NAME}" npm run lint
-      
+      - name: "Login to Docker Hub"
+        uses: docker/login-action@v3
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          username: dadamicro1
+          password: secrets.DOCKERHUB_EsgiCiCd
+      - name: "Push if on `main`"
+        uses: docker/build-push-action@v6
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          push: true
+          context: ./
+          tags: dadamicro1/sayhello:1.0.0"
