--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           push: true
           context: ./
-          tags: dadamicro1/sayhello:1.0.0"
+          tags: dadamicro1/sayhello:1.0.0
